--- a/pom.xml
+++ b/pom.xml
@@ -28,18 +28,32 @@
 		<developer>
 			<name>Torsten Krause</name>
 			<email>tk@markenwerk.net</email>
-			<organization>Markenwerk – Gesellschaft für markenbildende Maßnahmen mbH</organization>
-			<organizationUrl>http://markenwerk.net/</organizationUrl>
+			<organization>${project.organization.name}</organization>
+			<organizationUrl>${project.organization.url}</organizationUrl>
 		</developer>
 	</developers>
 
 	<scm>
-		<connection>scm:git:git@github.com:markenwerk/java-commons-iterators.git</connection>
-		<developerConnection>scm:git:git@github.com:markenwerk/java-commons-iterators.git</developerConnection>
-		<url>https://github.com/markenwerk/java-commons-iterators</url>
+		<connection>${connections.github}</connection>
+		<developerConnection>${connections.github}</developerConnection>
+		<url>${urls.github}</url>
 	</scm>
 
+	<ciManagement>
+		<system>Travis CI</system>
+		<url>${urls.travis}</url>
+	</ciManagement>
+
+	<issueManagement>
+		<system>GitHub Issues</system>
+		<url>${urls.github}/issues</url>
+	</issueManagement>
+
 	<properties>
+		<project.identifier>markenwerk/java-${project.artifactId}</project.identifier>
+		<urls.travis>https://travis-ci.org/${project.identifier}</urls.travis>
+		<urls.github>https://github.com/${project.identifier}</urls.github>
+		<connections.github>scm:git:github:${project.identifier}.git</connections.github>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.6</maven.compiler.source>
 		<maven.compiler.target>1.6</maven.compiler.target>
@@ -81,7 +95,7 @@
 					</includes>
 				</configuration>
 			</plugin>
-			
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
@@ -93,6 +107,7 @@
 					</archive>
 				</configuration>
 			</plugin>
+
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
@@ -112,62 +127,46 @@
 					</execution>
 				</executions>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.4</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.10.3</version>
+				<configuration>
+					<notimestamp>true</notimestamp>
+					<links>
+						<link>https://markenwerk.github.io/java-commons-interfaces/</link>
+					</links>
+				</configuration>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
 	<profiles>
 		<profile>
-			<id>release</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-source-plugin</artifactId>
-						<version>2.4</version>
-						<executions>
-							<execution>
-								<id>attach-sources</id>
-								<goals>
-									<goal>jar</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-javadoc-plugin</artifactId>
-						<version>2.10.3</version>
-						<executions>
-							<execution>
-								<id>attach-javadocs</id>
-								<goals>
-									<goal>jar</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-gpg-plugin</artifactId>
-						<version>1.6</version>
-						<executions>
-							<execution>
-								<id>sign-artifacts</id>
-								<phase>verify</phase>
-								<goals>
-									<goal>sign</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		
-		<profile>
-			<id>sonatype</id>
+			<id>deploy</id>
 			<distributionManagement>
 				<snapshotRepository>
 					<id>ossrh</id>
@@ -182,6 +181,21 @@
 			<build>
 				<plugins>
 					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<version>1.6</version>
+						<executions>
+							<execution>
+								<id>sign-artifacts</id>
+								<phase>verify</phase>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+
+					<plugin>
 						<groupId>org.sonatype.plugins</groupId>
 						<artifactId>nexus-staging-maven-plugin</artifactId>
 						<version>1.6.6</version>
@@ -191,6 +205,37 @@
 							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
 							<autoReleaseAfterClose>true</autoReleaseAfterClose>
 						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+		<profile>
+			<id>publish</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-scm-publish-plugin</artifactId>
+						<version>1.1</version>
+						<configuration>
+							<checkoutDirectory>${project.build.directory}/gh-pages</checkoutDirectory>
+							<checkinComment>Javadoc for ${project.artifactId}:${project.version}</checkinComment>
+							<content>${project.build.directory}/apidocs</content>
+							<siteOutputEncoding>UTF-8</siteOutputEncoding>
+							<skipDeletedFiles>true</skipDeletedFiles>
+							<pubScmUrl>${project.scm.developerConnection}</pubScmUrl>
+							<scmBranch>gh-pages</scmBranch>
+						</configuration>
+						<executions>
+							<execution>
+								<id>publish-javadocs</id>
+								<phase>install</phase>
+								<goals>
+									<goal>publish-scm</goal>
+								</goals>
+							</execution>
+						</executions>
 					</plugin>
 				</plugins>
 			</build>
