--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
 	<name>${project.groupId}:${project.artifactId}</name>
 	<description>Some common iterators for Java</description>
-	<url>https://github.com/markenwerk/java-commons-iterators</url>
+	<url>${urls.github}</url>
 	<inceptionYear>2015</inceptionYear>
 
 	<licenses>
