--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,13 @@
 		</dependency>
 
 		<dependency>
+			<groupId>net.markenwerk</groupId>
+			<artifactId>commons-datastructures</artifactId>
+			<version>1.1.0</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
