--- a/pom.xml
+++ b/pom.xml
@@ -152,13 +152,6 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>2.10.3</version>
-				<configuration>
-					<notimestamp>true</notimestamp>
-					<links>
-						<link>https://markenwerk.github.io/java-commons-interfaces/</link>
-						<link>https://markenwerk.github.io/java-commons-datastructures/</link>
-					</links>
-				</configuration>
 				<executions>
 					<execution>
 						<id>attach-javadocs</id>
@@ -221,6 +214,28 @@
 			<id>publish</id>
 			<build>
 				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-javadoc-plugin</artifactId>
+						<version>2.10.3</version>
+						<configuration>
+							<notimestamp>true</notimestamp>
+							<includeDependencySources>true</includeDependencySources>
+							<includeTransitiveDependencySources>true</includeTransitiveDependencySources>
+							<dependencySourceIncludes>
+								<dependencySourceInclude>net.markenwerk:*</dependencySourceInclude>
+							</dependencySourceIncludes>
+						</configuration>
+						<executions>
+							<execution>
+								<id>attach-javadocs</id>
+								<goals>
+									<goal>jar</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-scm-publish-plugin</artifactId>
