--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
 		<dependency>
 			<groupId>net.markenwerk</groupId>
 			<artifactId>commons-datastructures</artifactId>
+			<version>4.0.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>net.markenwerk</groupId>
+			<artifactId>commons-datastructures</artifactId>
 			<version>1.1.2</version>
 		</dependency>
 
